--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,8 @@ jobs:
       - name: Downloading & installing Essentials
         run: |
           Invoke-WebRequest -Uri 
-          "https://gitlab.com/chamod12/lm_win_10_github_rdp/-/raw/main/Downloads.bat" -OutFile 
-          "Downloads.bat"
-          cmd /c Downloads.bat
+          "https://gitlab.com/chamod12/lm_win_10_github_rdp/-/raw/main/Downloads.bat" -OutFile "Downloads.bat"
+           cmd /c Downloads.bat
           
       - name: Connect to LiteManager
         run: cmd /c show.bat
